# mpw-modeling-kara

./: .project  CMakeLists.txt  README.md  pom.xml
.github/workflows/: github-actions.yaml  workflow-build.yaml
bundles/de.unistuttgart.iste.sqa.mpw.modeling.karasimulator/: .gitignore  .project  plugin.properties  pom.xml
bundles/de.unistuttgart.iste.sqa.mpw.modeling.karasimulator/model/: Kara.ecore
bundles/de.unistuttgart.iste.sqa.mpw.modeling.karasimulator/src-commands/editor/: addLeafToTile.henshin  addMushroomToTile.henshin  addTreeToTile.henshin  clearTile.henshin  initKara.henshin  initWorld.henshin  initWorld.henshin_diagram
bundles/de.unistuttgart.iste.sqa.mpw.modeling.karasimulator/src-commands/game/: move.henshin  putLeaf.henshin  removeLeaf.henshin  turnLeft.henshin  turnRight.henshin
bundles/de.unistuttgart.iste.sqa.mpw.modeling.karasimulator/src-queries/conditions/editorworld/: addLeafToTileConstraints.query  addMushroomToTileConstraints.query  addTreeToTileConstraints.query  clearTileConstraints.query  initKaraConstraints.query  initWorldConstraints.query
bundles/de.unistuttgart.iste.sqa.mpw.modeling.karasimulator/src-queries/invariants/kara/: karaInitializedInvariant.query
bundles/de.unistuttgart.iste.sqa.mpw.modeling.karasimulator/src-queries/invariants/world/: worldInitializedInvariants.query
bundles/de.unistuttgart.iste.sqa.mpw.modeling.karasimulator/src-queries/queries/world/: isOnlyKaraAtLocation.query
bundles/de.unistuttgart.iste.sqa.mpw.modeling.karasimulator/src-workflow/workflow/: karasimulator_genmodel.mwe2  karasimulator_workflow.mwe2
core/: CMakeLists.txt
core/src/impl/: CMakeLists.txt  KaraCore.h  KaraGameViewPresenter.cpp  KaraGameViewPresenter.h  KaraView.h  WorldLoader.h
core/test/: KaraCommandTest.cpp
core/test/util/: DirectionTestHelper.cpp  DirectionTestHelper.h  TestUtils.cpp  TestUtils.h
core/test/view/: KaraViewModelStringifier.h  KaraViewModelTest.cpp  KaraViewTestBase.cpp  KaraViewTestBase.h  UserInputInterfaceFake.h
examples/: CMakeLists.txt  Example02.cpp  Example03.cpp
main/: CMakeLists.txt  SimpleKaraGame.cpp  SimpleKaraGame.h
releng/: release-checklist.md  update-versions.kts
releng/de.unistuttgart.iste.sqa.mpw.modeling.karasimulator.parent/: .project  pom.xml
releng/de.unistuttgart.iste.sqa.mpw.modeling.karasimulator.targetplatform/: .project  pom.xml  targetplatform.target
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.cpp/: CMakeLists.txt
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.cpp/cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.cpp/core/: CMakeLists.txt
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.cpp/core/resources/worlds/: example03.ter
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.cpp/core/src/impl/: CMakeListsImpl.cmake  WorldLoader.cpp
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.cpp/core/test/: CMakeLists.txt
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.cpp/core/test/util/: GameStringifier.cpp  GameStringifier.h
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.cpp/core/test/view/: KaraViewModelStringifier.cpp  KaraViewModelTest.cpp  UserInputInterfaceFake.cpp
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.cpp/examples/: Example01.cpp  Example02.cpp
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.cpp/main/: SimpleKaraGame.h
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.cpp/ui/: .gitignore  IncludeNanogui.cmake  SdlGameInputInterface.h
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.cpp/ui/util/: GameLogControl.h  InputDialogWindow.h  SpeedSliderControl.h  UiDimensions.h  WidgetBackgroundWrapper.cpp  WidgetBackgroundWrapper.h
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/: pom.xml
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/core/: pom.xml
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/core/src/main/java/: module-info.java
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/core/src/main/java/de/unistuttgart/kara/: WorldLoader.java
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/core/src/main/java/de/unistuttgart/kara/facade/: WorldLoader.java
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/core/src/main/resources/worlds/: example02.ter
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/core/src/test/java/de/unistuttgart/kara/: KaraCommandsTest.java
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/core/src/test/java/de/unistuttgart/kara/util/: DirectionTestHelper.java  GameStringifier.java
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/core/src/test/java/de/unistuttgart/kara/view/: KaraViewModelStringifier.java  KaraViewModelTest.java  KaraViewTestBase.java  UserInputInterfaceFake.java
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/examples/: pom.xml
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/examples/src/main/java/: module-info.java
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/examples/src/main/java/de/unistuttgart/kara/examples/: Example01.java  Example02.java  Example03.java
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/main/: pom.xml
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/main/src/main/java/: module-info.java
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/parent/: pom.xml
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/ui/: pom.xml
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/ui/src/main/java/: module-info.java
simulators/de.unistuttgart.iste.sqa.mpw.karasimulator.java/ui/src/main/resources/fxml/: GameScene.fxml
ui/: CMakeLists.txt  KaraApplicationHandler.cpp  KaraApplicationHandler.h  README.md  SdlApplication.cpp  SdlApplication.h  SdlApplicationListener.h  SdlGameInputInterface.cpp
ui/util/: ColorConverter.h  ControlWindowTheme.h  GameLogControl.cpp  InputDialogWindow.cpp  LightTheme.h  SpeedSliderControl.cpp
(+19 files in other folders)
